  with im_class == im_self == NULL, which caused a crash when called.

Extension Modules
-----------------

- Bug #1194181: bz2.BZ2File didn't handle mode 'U' correctly.

- Bug #1166660: The readline module could segfault if hook functions
  were set in a different thread than that which called readline.

- weakref proxy has incorrect __nonzero__ behavior.  SF bug #1770766.

Library
-------

- Bug #1196315: fix weakref.WeakValueDictionary constructor.

- Bug #1213894: os.path.realpath didn't resolve symlinks that were the first
  component of the path.

- distutils.commands.register now encodes the data as UTF-8 before posting
  them to PyPI.

- Partial fixes for SF bugs #1163244 and #1175396: If a chunk read by
  ``codecs.StreamReader.readline()`` has a trailing "\r", read one more
  character even if the user has passed a size parameter to get a proper
  line ending. Remove the special handling of a "\r\n" that has been split
  between two lines.


What's New in Python 2.4.1 final?
=================================

*Release date: 30-MAR-2005*

Core and builtins
-----------------

- Move exception finalisation later in the shutdown process - this 
  fixes the crash seen in bug #1165761

Tests
-----

- SF patch 1167316: doctest.py fails self-test if run directly.

Build
-----

- SF patch 1171767: Darwin 8's headers are anal about POSIX compliance, 
  and linking has changed (prebinding is now deprecated, and libcc_dynamic 
  no longer exists). This configure patch makes things right.


What's New in Python 2.4.1c2?
=============================

*Release date: 17-MAR-2005*

Library
-------

- Fixed decimal operator and comparison methods to return NotImplemented
  instead of raising a TypeError when interacting with other types. 
  Allows other classes to successfully implement __radd__ style methods.

- Bug #1163325:  Decimal infinities failed to hash.  Attempting to
  hash a NaN raised an InvalidOperation instead of a TypeError.
