@@ -39,6 +39,8 @@ Extension Modules
 Library
 -------
 
+- Bug #1224621: tokenize module does not detect inconsistent dedents
+
 - Bug #1196315: fix weakref.WeakValueDictionary constructor.
 
 - Bug #1213894: os.path.realpath didn't resolve symlinks that were the first
